# AdvCompSys

./: .gitignore  ALotOfLittleWomen.rar  README.md
FinalProject/: 2d_fluid.cpp  2d_fluid.h  CMakeLists.txt  README.md  hello_rectangle.cpp  matrix_mult.cpp  matrix_mult.h  visualize.cpp
FinalProject/MatrixVersion_old/: 2d_fluid.cpp  matrix_mult.h  visualize.cpp
FinalProject/SIMD/: 2d_fluid.cpp  2d_fluid.h  visualize.cpp
FinalProject/SIMD-AVX/: 2d_fluid.cpp  2d_fluid.h  visualize.cpp
FinalProject/SIMD-AVX-OpenMP/: 2d_fluid.cpp  2d_fluid.h  visualize.cpp
FinalProject/SIMD-AVX_Obstacle/: 2d_fluid.cpp  2d_fluid.h  visualize.cpp
FinalProject/SIMD-OpenMP/: 2d_fluid.cpp  2d_fluid.h  visualize.cpp
FinalProject/Sequential/: 2d_fluid.cpp  2d_fluid.h  visualize.cpp
FinalProject/Testing/: 2d_fluid.cpp  2d_fluid.h  matrix_mult.cpp  testing.cpp  visualize.cpp
FinalProject/cmake/modules/: Findp8g.cmake
Project1/: Advanced_Computer_Systems_Analysis_and_Conclusion.docx  Advanced_Computer_Systems_Experimental_Results.xlsx  Project1_Final.cpp  Project1_Final_avging.cpp  README.md  a.out  chk.txt  common.h  compress_multithread.cpp  compress_simple_multithread.cpp  compress_singlethread.cpp  decompression.cpp  littlewomen.txt.zst  medium.txt  medium.txt.zst  open_memstreamdb.cpp  scarletletter.txt  scarletletter.txt.zst  small.txt  small.txt.zst  utils.h  zstd_pthread_test.cpp  zstd_testing.cpp
Project2/: .gitignore  README.md  matrix_mult.cpp  matrix_mult_AVX.cpp  matrix_mult_naive.cpp
Project3/: ACS-Project3-FIO_Data.xlsx  ACS-Project3-MLC_Data.xlsx  README.md
(+7 files in other folders)
